--- a/hw4/phone/index.html
+++ b/hw4/phone/index.html
@@ -4,6 +4,6 @@
  <meta charset='utf-8'>
  </head>
  <body>
- 	<script type="text/javascript" src="myscript.js"></script>
+ 	<script type="text/javascript" src="phone.js"></script>
  </body>
 </html>
