--- a/hw4/table/table.html
+++ b/hw4/table/table.html
@@ -1,12 +1,45 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+ <head>
+    <meta charset="utf-8">
+ </head>
+ <body>
+ <table id="mytab" border="1"> 
+ 	<thead>Данные из глобальной области</thead> 
+ 	<th>Свойство</th>
+ 	<th>Данные</th>
 
-<head>
-  <meta charset="utf-8">
-</head>
 
-<body>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
+ 		<tr></tr>
 
-</body>
-<script src="table.js"></script>
-</html>
+</table>
+ 	</table>
+ 	<script src="table.js"></script>
+ 	   
+
+ </body>
+ </html>
