--- a/hw5/countriesTable/table.html
+++ b/hw5/countriesTable/table.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <meta charset="utf-8">
 </head>
 
 <body>
 
 </body>
-<script src="js/table.js"></script>
+<script src="table.js"></script>
 </html>
