--- a/hw6/DOM/index.html
+++ b/hw6/DOM/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE HTML>
+
+<!DOCTYPE html>
 <html>
-  <head> 
-  <meta charset='utf-8'>
-     <script type="myscript.js"></script>
-  </head>
-  <body>
-    <p>Examle Julia</p>
-    <div id ='1'>
-      <div id="example">
-      </div>
-    </div>
-    <div id = 'result'></div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+</head>
+<body>
+ <script src="myscript.js"></script>
+</body>
 </html>
